bdr.BDR.scala.error
Erreur de compilation :
BDR:32: error: not found: value False
    a = False;
        ^